--- a/KarthikBallary/Supply Chain Management/workflows/Seq-Fill_Details.xaml
+++ b/KarthikBallary/Supply Chain Management/workflows/Seq-Fill_Details.xaml
@@ -13,7 +13,7 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>730,2966.66666666667</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>964,3078.66666666667</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>Seq_Fill_Details_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="48">
@@ -73,22 +73,21 @@
       <AssemblyReference>UiPath.Excel</AssemblyReference>
       <AssemblyReference>UiPath.OCR.Activities.Design</AssemblyReference>
       <AssemblyReference>UiPath.UIAutomationCore</AssemblyReference>
-      <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="Seq_Fill_Details" sap:VirtualizedContainerService.HintSize="740,2802" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="Seq_Fill_Details" sap:VirtualizedContainerService.HintSize="974,2914" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <ui:BrowserScope Browser="{x:Null}" SearchScope="{x:Null}" TimeoutMS="{x:Null}" UiBrowser="{x:Null}" BrowserType="Chrome" ContinueOnError="False" DisplayName="Attach Browser-RPA Samples Details Form" sap:VirtualizedContainerService.HintSize="698,2710" sap2010:WorkflowViewState.IdRef="BrowserScope_1" InformativeScreenshot="8860c862279722e1df600bc5d05c60e3" Selector="&lt;html app='chrome.exe' title='UiPath Demo App' /&gt;">
+    <ui:BrowserScope Browser="{x:Null}" SearchScope="{x:Null}" TimeoutMS="{x:Null}" UiBrowser="{x:Null}" BrowserType="Chrome" ContinueOnError="False" DisplayName="Attach Browser-RPA Samples Details Form" sap:VirtualizedContainerService.HintSize="932,2822" sap2010:WorkflowViewState.IdRef="BrowserScope_1" InformativeScreenshot="8860c862279722e1df600bc5d05c60e3" Selector="&lt;html app='chrome.exe' title='UiPath Demo App' /&gt;">
       <ui:BrowserScope.Body>
         <ActivityAction x:TypeArguments="x:Object">
           <ActivityAction.Argument>
             <DelegateInArgument x:TypeArguments="x:Object" Name="ContextTarget" />
           </ActivityAction.Argument>
-          <Sequence DisplayName="Do" sap:VirtualizedContainerService.HintSize="664,2564" sap2010:WorkflowViewState.IdRef="Sequence_2">
+          <Sequence DisplayName="Do" sap:VirtualizedContainerService.HintSize="898,2676" sap2010:WorkflowViewState.IdRef="Sequence_2">
             <Sequence.Variables>
               <Variable x:TypeArguments="x:String" Name="recurrentSupplier_flag" />
               <Variable x:TypeArguments="s:DateTime" Name="selectDate" />
@@ -98,7 +97,7 @@
                 <x:Boolean x:Key="IsExpanded">True</x:Boolean>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <ui:TypeInto Activate="{x:Null}" DelayBefore="{x:Null}" DelayBetweenKeys="{x:Null}" DelayMS="{x:Null}" SendWindowMessages="{x:Null}" AlterIfDisabled="True" ClickBeforeTyping="True" ContinueOnError="False" DisplayName="Type Into-Internal Name" EmptyField="True" sap:VirtualizedContainerService.HintSize="622,134" sap2010:WorkflowViewState.IdRef="TypeInto_1" SimulateType="True" Text="[in_internalName]">
+            <ui:TypeInto Activate="{x:Null}" DelayBefore="{x:Null}" DelayBetweenKeys="{x:Null}" DelayMS="{x:Null}" SendWindowMessages="{x:Null}" AlterIfDisabled="True" ClickBeforeTyping="True" ContinueOnError="False" DisplayName="Type Into-Internal Name" EmptyField="True" sap:VirtualizedContainerService.HintSize="856,134" sap2010:WorkflowViewState.IdRef="TypeInto_1" SimulateType="True" Text="[in_internalName]">
               <ui:TypeInto.Target>
                 <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" Id="e80cd425-03fe-421c-9f36-d15d5a66434b" InformativeScreenshot="8abbcefdd59a8753f38ff89a4d4ea06a" Selector="&lt;webctrl tag='INPUT' type='text' aaname='Internal Name*' /&gt;" WaitForReady="COMPLETE">
                   <ui:Target.TimeoutMS>
@@ -107,7 +106,7 @@
                 </ui:Target>
               </ui:TypeInto.Target>
             </ui:TypeInto>
-            <ui:TypeInto Activate="{x:Null}" DelayBefore="{x:Null}" DelayBetweenKeys="{x:Null}" DelayMS="{x:Null}" SendWindowMessages="{x:Null}" AlterIfDisabled="True" ClickBeforeTyping="True" ContinueOnError="False" DisplayName="Type Into-External Name" EmptyField="True" sap:VirtualizedContainerService.HintSize="622,134" sap2010:WorkflowViewState.IdRef="TypeInto_2" SimulateType="True" Text="[in_ExternalName]">
+            <ui:TypeInto Activate="{x:Null}" DelayBefore="{x:Null}" DelayBetweenKeys="{x:Null}" DelayMS="{x:Null}" SendWindowMessages="{x:Null}" AlterIfDisabled="True" ClickBeforeTyping="True" ContinueOnError="False" DisplayName="Type Into-External Name" EmptyField="True" sap:VirtualizedContainerService.HintSize="856,134" sap2010:WorkflowViewState.IdRef="TypeInto_2" SimulateType="True" Text="[in_ExternalName]">
               <ui:TypeInto.Target>
                 <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" Id="1a4955bf-294c-44e1-a0f9-49571fb063f8" InformativeScreenshot="233b5ee8fa5acb5e4418f3459345ccc6" Selector="&lt;webctrl tag='INPUT' type='text' aaname='External Name' /&gt;" WaitForReady="COMPLETE">
                   <ui:Target.TimeoutMS>
@@ -116,7 +115,7 @@
                 </ui:Target>
               </ui:TypeInto.Target>
             </ui:TypeInto>
-            <ui:Click DelayBefore="{x:Null}" DelayMS="{x:Null}" SendWindowMessages="{x:Null}" AlterIfDisabled="True" ClickType="CLICK_SINGLE" ContinueOnError="False" DisplayName="Click-Industry" sap:VirtualizedContainerService.HintSize="622,106" sap2010:WorkflowViewState.IdRef="Click_1" KeyModifiers="None" MouseButton="BTN_LEFT" SimulateClick="True">
+            <ui:Click DelayBefore="{x:Null}" DelayMS="{x:Null}" SendWindowMessages="{x:Null}" AlterIfDisabled="True" ClickType="CLICK_SINGLE" ContinueOnError="False" DisplayName="Click-Industry" sap:VirtualizedContainerService.HintSize="856,106" sap2010:WorkflowViewState.IdRef="Click_1" KeyModifiers="None" MouseButton="BTN_LEFT" SimulateClick="True">
               <ui:Click.CursorPosition>
                 <ui:CursorPosition Position="Center">
                   <ui:CursorPosition.OffsetX>
@@ -135,7 +134,7 @@
                 </ui:Target>
               </ui:Click.Target>
             </ui:Click>
-            <ui:Click DelayBefore="{x:Null}" DelayMS="{x:Null}" SendWindowMessages="{x:Null}" AlterIfDisabled="True" ClickType="CLICK_SINGLE" DisplayName="Select Industry" sap:VirtualizedContainerService.HintSize="622,106" sap2010:WorkflowViewState.IdRef="Click_2" KeyModifiers="None" MouseButton="BTN_LEFT" SimulateClick="True">
+            <ui:Click DelayBefore="{x:Null}" DelayMS="{x:Null}" SendWindowMessages="{x:Null}" AlterIfDisabled="True" ClickType="CLICK_SINGLE" DisplayName="Select Industry" sap:VirtualizedContainerService.HintSize="856,106" sap2010:WorkflowViewState.IdRef="Click_2" KeyModifiers="None" MouseButton="BTN_LEFT" SimulateClick="True">
               <ui:Click.CursorPosition>
                 <ui:CursorPosition Position="Center">
                   <ui:CursorPosition.OffsetX>
@@ -154,7 +153,7 @@
                 </ui:Target>
               </ui:Click.Target>
             </ui:Click>
-            <ui:GetAttribute ContinueOnError="{x:Null}" Attribute="aria-checked" DisplayName="Get Attribute-Recurrent Supplier" sap:VirtualizedContainerService.HintSize="622,204.666666666667" sap2010:WorkflowViewState.IdRef="GetAttribute_1">
+            <ui:GetAttribute ContinueOnError="{x:Null}" Attribute="aria-checked" DisplayName="Get Attribute-Recurrent Supplier" sap:VirtualizedContainerService.HintSize="856,204.666666666667" sap2010:WorkflowViewState.IdRef="GetAttribute_1">
               <ui:GetAttribute.Result>
                 <OutArgument x:TypeArguments="x:String">[recurrentSupplier_flag]</OutArgument>
               </ui:GetAttribute.Result>
@@ -162,7 +161,7 @@
                 <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" Id="70243bc7-a780-42f4-afe9-e16fb0a59950" InformativeScreenshot="375034ba8997b4f67142493a2c97c646" Selector="&lt;webctrl aaname='Recurrent Supplier' tag='SPAN' /&gt;&lt;nav up='2' /&gt;&lt;webctrl tag='INPUT' type='checkbox' aaname='Recurrent Supplier' /&gt;" TimeoutMS="2000" WaitForReady="COMPLETE" />
               </ui:GetAttribute.Target>
             </ui:GetAttribute>
-            <If Condition="[recurrentSupplier_flag.Equals(&quot;True&quot;)]" sap:VirtualizedContainerService.HintSize="622,266.666666666667" sap2010:WorkflowViewState.IdRef="If_1">
+            <If Condition="[recurrentSupplier_flag.Equals(&quot;True&quot;)]" sap:VirtualizedContainerService.HintSize="856,266.666666666667" sap2010:WorkflowViewState.IdRef="If_1">
               <sap:WorkflowViewStateService.ViewState>
                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
                   <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -191,7 +190,7 @@
                 </ui:Click>
               </If.Else>
             </If>
-            <ui:Click DelayBefore="{x:Null}" DelayMS="{x:Null}" SendWindowMessages="{x:Null}" AlterIfDisabled="True" ClickType="CLICK_SINGLE" ContinueOnError="False" DisplayName="Click-Date" sap:VirtualizedContainerService.HintSize="622,106" sap2010:WorkflowViewState.IdRef="Click_4" KeyModifiers="None" MouseButton="BTN_LEFT" SimulateClick="True">
+            <ui:Click DelayBefore="{x:Null}" DelayMS="{x:Null}" SendWindowMessages="{x:Null}" AlterIfDisabled="True" ClickType="CLICK_SINGLE" ContinueOnError="False" DisplayName="Click-Date" sap:VirtualizedContainerService.HintSize="856,106" sap2010:WorkflowViewState.IdRef="Click_4" KeyModifiers="None" MouseButton="BTN_LEFT" SimulateClick="True">
               <ui:Click.CursorPosition>
                 <ui:CursorPosition Position="Center">
                   <ui:CursorPosition.OffsetX>
@@ -210,7 +209,7 @@
                 </ui:Target>
               </ui:Click.Target>
             </ui:Click>
-            <Assign DisplayName="Assign-Date" sap:VirtualizedContainerService.HintSize="622,62" sap2010:WorkflowViewState.IdRef="Assign_1">
+            <Assign DisplayName="Assign-Date" sap:VirtualizedContainerService.HintSize="856,62" sap2010:WorkflowViewState.IdRef="Assign_1">
               <Assign.To>
                 <OutArgument x:TypeArguments="s:DateTime">[selectDate]</OutArgument>
               </Assign.To>
@@ -218,7 +217,7 @@
                 <InArgument x:TypeArguments="s:DateTime">[now.AddDays(in_Days)]</InArgument>
               </Assign.Value>
             </Assign>
-            <ui:TypeInto Activate="{x:Null}" DelayBefore="{x:Null}" DelayBetweenKeys="{x:Null}" DelayMS="{x:Null}" SendWindowMessages="{x:Null}" AlterIfDisabled="True" ClickBeforeTyping="True" ContinueOnError="False" DisplayName="Type Into-Date" EmptyField="True" sap:VirtualizedContainerService.HintSize="622,134" sap2010:WorkflowViewState.IdRef="TypeInto_4" SimulateType="True" Text="[selectDate.ToString(in_dateFormat)]">
+            <ui:TypeInto Activate="{x:Null}" DelayBefore="{x:Null}" DelayBetweenKeys="{x:Null}" DelayMS="{x:Null}" SendWindowMessages="{x:Null}" AlterIfDisabled="True" ClickBeforeTyping="True" ContinueOnError="False" DisplayName="Type Into-Date" EmptyField="True" sap:VirtualizedContainerService.HintSize="856,134" sap2010:WorkflowViewState.IdRef="TypeInto_4" SimulateType="True" Text="[selectDate.ToString(in_dateFormat)]">
               <ui:TypeInto.Target>
                 <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" Id="0115a375-56d4-45fb-8480-246c1348bd12" InformativeScreenshot="a50d06de41e09fcbef957c96a21cc978" Selector="&lt;webctrl tag='LABEL' aaname='Date' class='ms-Label root-*' /&gt;&lt;nav up='1' /&gt;&lt;webctrl tag='INPUT' aaname='Date' class='ms-TextField-field field-*' /&gt;" WaitForReady="COMPLETE">
                   <ui:Target.TimeoutMS>
@@ -227,7 +226,7 @@
                 </ui:Target>
               </ui:TypeInto.Target>
             </ui:TypeInto>
-            <ui:Click DelayBefore="{x:Null}" DelayMS="{x:Null}" SendWindowMessages="{x:Null}" AlterIfDisabled="True" ClickType="CLICK_SINGLE" ContinueOnError="False" DisplayName="Click-Link HR" sap:VirtualizedContainerService.HintSize="622,106" sap2010:WorkflowViewState.IdRef="Click_9" KeyModifiers="None" MouseButton="BTN_LEFT" SimulateClick="True">
+            <ui:Click DelayBefore="{x:Null}" DelayMS="{x:Null}" SendWindowMessages="{x:Null}" AlterIfDisabled="True" ClickType="CLICK_SINGLE" ContinueOnError="False" DisplayName="Click-Link HR" sap:VirtualizedContainerService.HintSize="856,106" sap2010:WorkflowViewState.IdRef="Click_9" KeyModifiers="None" MouseButton="BTN_LEFT" SimulateClick="True">
               <ui:Click.CursorPosition>
                 <ui:CursorPosition Position="Center">
                   <ui:CursorPosition.OffsetX>
@@ -246,7 +245,7 @@
                 </ui:Target>
               </ui:Click.Target>
             </ui:Click>
-            <ui:Click DelayBefore="{x:Null}" DelayMS="{x:Null}" SimulateClick="{x:Null}" AlterIfDisabled="True" ClickType="CLICK_SINGLE" ContinueOnError="False" DisplayName="Click-Add File" sap:VirtualizedContainerService.HintSize="622,106" sap2010:WorkflowViewState.IdRef="Click_10" KeyModifiers="None" MouseButton="BTN_LEFT" SendWindowMessages="True">
+            <ui:Click DelayBefore="{x:Null}" DelayMS="{x:Null}" SendWindowMessages="{x:Null}" SimulateClick="{x:Null}" AlterIfDisabled="True" ClickType="CLICK_SINGLE" ContinueOnError="False" DisplayName="Click-Add File" sap:VirtualizedContainerService.HintSize="856,106" sap2010:WorkflowViewState.IdRef="Click_10" KeyModifiers="None" MouseButton="BTN_LEFT">
               <ui:Click.CursorPosition>
                 <ui:CursorPosition Position="Center">
                   <ui:CursorPosition.OffsetX>
@@ -261,9 +260,9 @@
                 <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" Id="8a508647-9176-41db-a630-c9fb29fe1e70" InformativeScreenshot="45d4e5ed0b9814b9be414656f858f866" Selector="&lt;webctrl aaname='Add File' class='custom-file-upload' /&gt;" TimeoutMS="5000" WaitForReady="COMPLETE" />
               </ui:Click.Target>
             </ui:Click>
-            <If Condition="[File.Exists(in_imageFilePath)]" sap:VirtualizedContainerService.HintSize="622,420.666666666667" sap2010:WorkflowViewState.IdRef="If_2">
+            <If Condition="[File.Exists(in_imageFilePath)]" sap:VirtualizedContainerService.HintSize="856,532.666666666667" sap2010:WorkflowViewState.IdRef="If_2">
               <If.Then>
-                <ui:WindowScope ApplicationWindow="{x:Null}" SearchScope="{x:Null}" TimeoutMS="{x:Null}" Window="{x:Null}" ContinueOnError="False" DisplayName="Attach Window-File Path" sap:VirtualizedContainerService.HintSize="200,52.6666666666667" sap2010:WorkflowViewState.IdRef="WindowScope_1" InformativeScreenshot="6d05aecd9185ab0e70c523877de3126c" Selector="&lt;wnd app='chrome.exe' cls='#32770' title='Open' /&gt;">
+                <ui:WindowScope ApplicationWindow="{x:Null}" SearchScope="{x:Null}" TimeoutMS="{x:Null}" Window="{x:Null}" ContinueOnError="False" DisplayName="Attach Window-File Path" sap:VirtualizedContainerService.HintSize="434,372" sap2010:WorkflowViewState.IdRef="WindowScope_1" InformativeScreenshot="6d05aecd9185ab0e70c523877de3126c" Selector="&lt;wnd app='chrome.exe' title='Open' /&gt;">
                   <ui:WindowScope.Body>
                     <ActivityAction x:TypeArguments="x:Object">
                       <ActivityAction.Argument>
@@ -275,9 +274,9 @@
                             <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                           </scg:Dictionary>
                         </sap:WorkflowViewStateService.ViewState>
-                        <ui:TypeInto DelayBefore="{x:Null}" DelayBetweenKeys="{x:Null}" DelayMS="{x:Null}" SimulateType="{x:Null}" Activate="True" AlterIfDisabled="True" ClickBeforeTyping="True" ContinueOnError="False" DisplayName="Type Into-File Path" EmptyField="True" sap:VirtualizedContainerService.HintSize="334,134" sap2010:WorkflowViewState.IdRef="TypeInto_3" SendWindowMessages="True" Text="[in_imageFilePath+ &quot;[k(enter)]&quot;]">
+                        <ui:TypeInto Activate="{x:Null}" DelayBefore="{x:Null}" DelayBetweenKeys="{x:Null}" DelayMS="{x:Null}" SimulateType="{x:Null}" AlterIfDisabled="True" ClickBeforeTyping="True" ContinueOnError="False" DisplayName="Type Into-File Path" EmptyField="True" sap:VirtualizedContainerService.HintSize="334,134" sap2010:WorkflowViewState.IdRef="TypeInto_3" SendWindowMessages="True" Text="[in_imageFilePath+ &quot;[k(enter)]&quot;]">
                           <ui:TypeInto.Target>
-                            <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" Id="951d1064-dbc2-4f0f-97e8-35b86b43ba76" InformativeScreenshot="309eaaac8c5566cf26fa16d9286fb2f0" Selector="&lt;wnd ctrlid='1148' /&gt;&lt;wnd ctrlid='1148' /&gt;&lt;wnd ctrlid='1148' /&gt;&lt;ctrl name='File name:' role='editable text' /&gt;" WaitForReady="COMPLETE">
+                            <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" Id="951d1064-dbc2-4f0f-97e8-35b86b43ba76" InformativeScreenshot="309eaaac8c5566cf26fa16d9286fb2f0" Selector="&lt;ctrl name='File name:' role='editable text' /&gt;" WaitForReady="COMPLETE">
                               <ui:Target.TimeoutMS>
                                 <InArgument x:TypeArguments="x:Int32" />
                               </ui:Target.TimeoutMS>
@@ -289,7 +288,7 @@
                   </ui:WindowScope.Body>
                   <sap:WorkflowViewStateService.ViewState>
                     <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                      <x:Boolean x:Key="IsExpanded">False</x:Boolean>
+                      <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                       <x:Boolean x:Key="IsPinned">False</x:Boolean>
                     </scg:Dictionary>
                   </sap:WorkflowViewStateService.ViewState>
@@ -325,7 +324,7 @@
                 </Sequence>
               </If.Else>
             </If>
-            <ui:Click DelayBefore="{x:Null}" DelayMS="{x:Null}" SendWindowMessages="{x:Null}" AlterIfDisabled="True" ClickType="CLICK_SINGLE" ContinueOnError="False" DisplayName="Click-Save" sap:VirtualizedContainerService.HintSize="622,106" sap2010:WorkflowViewState.IdRef="Click_11" KeyModifiers="None" MouseButton="BTN_LEFT" SimulateClick="True">
+            <ui:Click DelayBefore="{x:Null}" DelayMS="{x:Null}" SendWindowMessages="{x:Null}" AlterIfDisabled="True" ClickType="CLICK_SINGLE" ContinueOnError="False" DisplayName="Click-Save" sap:VirtualizedContainerService.HintSize="856,106" sap2010:WorkflowViewState.IdRef="Click_11" KeyModifiers="None" MouseButton="BTN_LEFT" SimulateClick="True">
               <ui:Click.CursorPosition>
                 <ui:CursorPosition Position="Center">
                   <ui:CursorPosition.OffsetX>
