--- a/KarthikBallary/Supply Chain Management/workflows/Seq-SendMail.xaml
+++ b/KarthikBallary/Supply Chain Management/workflows/Seq-SendMail.xaml
@@ -4,11 +4,11 @@
     <x:Property Name="in_CredentialName" Type="InArgument(x:String)" />
     <x:Property Name="in_toRecipent" Type="InArgument(x:String)" />
     <x:Property Name="in_subject" Type="InArgument(x:String)" />
-    <x:Property Name="in_portNumber" Type="InArgument(x:Int32)" />
-    <x:Property Name="in_serverName" Type="InArgument(x:String)" />
     <x:Property Name="in_exportedCSV" Type="InArgument(x:String)" />
     <x:Property Name="in_screenshot" Type="InArgument(x:String)" />
     <x:Property Name="in_supplierList" Type="InArgument(x:String)" />
+    <x:Property Name="in_PortNumber_AssetName" Type="InArgument(x:String)" />
+    <x:Property Name="in_portServer_AssetName" Type="InArgument(x:String)" />
   </x:Members>
   <this:Seq_SendMail.in_exportedCSV>
     <InArgument x:TypeArguments="x:String" />
@@ -19,10 +19,16 @@
   <this:Seq_SendMail.in_supplierList>
     <InArgument x:TypeArguments="x:String" />
   </this:Seq_SendMail.in_supplierList>
+  <this:Seq_SendMail.in_PortNumber_AssetName>
+    <InArgument x:TypeArguments="x:String" />
+  </this:Seq_SendMail.in_PortNumber_AssetName>
+  <this:Seq_SendMail.in_portServer_AssetName>
+    <InArgument x:TypeArguments="x:String" />
+  </this:Seq_SendMail.in_portServer_AssetName>
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>566,812.666666666667</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>566,1174</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>Seq_SendMail_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="27">
@@ -78,11 +84,13 @@
       <AssemblyReference>UiPath.Mail.Activities</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
-  <Sequence sap2010:Annotation.AnnotationText="This will send a mail to Client" DisplayName="Seq_SendMail" sap:VirtualizedContainerService.HintSize="426,648" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence sap2010:Annotation.AnnotationText="This will send a mail to Client" DisplayName="Seq_SendMail" sap:VirtualizedContainerService.HintSize="486,1009.33333333333" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="ss:SecureString" Name="password" />
       <Variable x:TypeArguments="x:String" Name="username" />
       <Variable x:TypeArguments="x:String" Name="bodyOfMail" />
+      <Variable x:TypeArguments="x:Int32" Name="portNumber" />
+      <Variable x:TypeArguments="x:String" Name="serverName" />
     </Sequence.Variables>
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -90,21 +98,25 @@
         <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="384,94.6666666666667" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="Trace" Message="[&quot;Sending mail&quot;]" />
-    <ui:ReadTextFile Content="[bodyOfMail]" DisplayName="Read Text File" FileName="[in_mailBodyFile]" sap:VirtualizedContainerService.HintSize="384,80.6666666666667" sap2010:WorkflowViewState.IdRef="ReadTextFile_1" />
-    <ui:GetRobotCredential TimeoutMS="{x:Null}" AssetName="[in_CredentialName]" DisplayName="Get Credential" sap:VirtualizedContainerService.HintSize="384,80.6666666666667" sap2010:WorkflowViewState.IdRef="GetRobotCredential_1" Password="[password]" Username="[username]" />
-    <ui:SendMail Bcc="{x:Null}" Cc="{x:Null}" From="{x:Null}" MailMessage="{x:Null}" Name="{x:Null}" Password="{x:Null}" ReplyTo="{x:Null}" TimeoutMS="{x:Null}" Body="[bodyOfMail]" DisplayName="Send SMTP Mail Message" Email="[username]" EnableSSL="True" sap:VirtualizedContainerService.HintSize="384,149.333333333333" sap2010:WorkflowViewState.IdRef="SendMail_1" IsBodyHtml="False" Port="[in_portNumber]" SecureConnection="Auto" SecurePassword="[password]" Server="[in_serverName]" Subject="[in_subject]" To="[in_toRecipent]">
+    <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="444,94.6666666666667" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="Trace" Message="[&quot;Sending mail&quot;]" />
+    <ui:ReadTextFile Content="[bodyOfMail]" DisplayName="Read Text File" FileName="[in_mailBodyFile]" sap:VirtualizedContainerService.HintSize="444,80.6666666666667" sap2010:WorkflowViewState.IdRef="ReadTextFile_1" />
+    <ui:GetRobotCredential TimeoutMS="{x:Null}" AssetName="[in_CredentialName]" DisplayName="Get Credential" sap:VirtualizedContainerService.HintSize="444,80.6666666666667" sap2010:WorkflowViewState.IdRef="GetRobotCredential_1" Password="[password]" Username="[username]" />
+    <ui:GetRobotAsset TimeoutMS="{x:Null}" AssetName="[in_PortNumber_AssetName]" DisplayName="Get Asset-Port Number" sap:VirtualizedContainerService.HintSize="444,140.666666666667" sap2010:WorkflowViewState.IdRef="GetRobotAsset_1">
+      <ui:GetRobotAsset.Value>
+        <OutArgument x:TypeArguments="x:Int32">[portNumber]</OutArgument>
+      </ui:GetRobotAsset.Value>
+    </ui:GetRobotAsset>
+    <ui:GetRobotAsset TimeoutMS="{x:Null}" AssetName="[in_portServer_AssetName]" DisplayName="Get Asset-Port Server Name" sap:VirtualizedContainerService.HintSize="444,140.666666666667" sap2010:WorkflowViewState.IdRef="GetRobotAsset_2">
+      <ui:GetRobotAsset.Value>
+        <OutArgument x:TypeArguments="x:String">[serverName]</OutArgument>
+      </ui:GetRobotAsset.Value>
+    </ui:GetRobotAsset>
+    <ui:SendMail Bcc="{x:Null}" Cc="{x:Null}" From="{x:Null}" MailMessage="{x:Null}" Name="{x:Null}" Password="{x:Null}" ReplyTo="{x:Null}" TimeoutMS="{x:Null}" Body="[bodyOfMail]" DisplayName="Send SMTP Mail Message" Email="[username]" EnableSSL="True" sap:VirtualizedContainerService.HintSize="444,149.333333333333" sap2010:WorkflowViewState.IdRef="SendMail_1" IsBodyHtml="False" Port="[portNumber]" SecureConnection="Auto" SecurePassword="[password]" Server="[serverName]" Subject="[in_subject]" To="[in_toRecipent]">
       <ui:SendMail.Files>
         <scg:List x:TypeArguments="InArgument(x:String)" Capacity="4">
-          <InArgument x:TypeArguments="x:String">
-            <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_exportedCSV" />
-          </InArgument>
-          <InArgument x:TypeArguments="x:String">
-            <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_screenshot" />
-          </InArgument>
-          <InArgument x:TypeArguments="x:String">
-            <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_supplierList" />
-          </InArgument>
+          <InArgument x:TypeArguments="x:String">[in_exportedCSV]</InArgument>
+          <InArgument x:TypeArguments="x:String">[in_screenshot]</InArgument>
+          <InArgument x:TypeArguments="x:String">[in_supplierList]</InArgument>
         </scg:List>
       </ui:SendMail.Files>
     </ui:SendMail>
